--- a/src/Msi/Bundle/MainBundle/Resources/public/css/style.css
+++ b/src/Msi/Bundle/MainBundle/Resources/public/css/style.css
@@ -87,9 +87,10 @@ hr {
     border-top: 1px solid #000;
     border-bottom: 1px solid #333333;
 }
-.inner {
-    border-right: 1px solid #333333;
-    padding: 0 20px;
+.box {
+    background: #222;
+    border: 1px solid #333;
+    padding: 10px;
 }
 /*Bootstrap*/
 .thumbnail {
