--- a/app/Resources/MsiAdminBundle/views/layout.html.twig
+++ b/app/Resources/MsiAdminBundle/views/layout.html.twig
@@ -8,6 +8,7 @@
 <li><a href="{{ path('admin_msi_user_user_index') }}">{{ 'User'|transchoice(2, {}, 'MsiUserBundle') }}</a></li>
 <li><a href="{{ path('admin_msi_menu_root_index') }}">{{ 'Menu'|transchoice(2, {}, 'MsiMenuBundle') }}</a></li>
 <li><a href="{{ path('admin_msi_page_page_index') }}">{{ 'Page'|transchoice(2, {}, 'MsiPageBundle') }}</a></li>
+<li><a href="{{ path('admin_msi_news_article_index') }}">News</a></li>
 {% endblock %}
 
 {% block right_nav %}
