--- a/src/Msi/Bundle/MainBundle/Resources/public/css/style.css
+++ b/src/Msi/Bundle/MainBundle/Resources/public/css/style.css
@@ -91,6 +91,7 @@ hr {
     background: #222;
     border: 1px solid #333;
     padding: 10px;
+    margin-bottom: 9px;
 }
 /*Bootstrap*/
 .thumbnail {
