--- a/src/Msi/Bundle/MainBundle/Resources/views/Page/default_titleless.html.twig
+++ b/src/Msi/Bundle/MainBundle/Resources/views/Page/default_titleless.html.twig
@@ -24,11 +24,11 @@
 <div class="row">
     <div class="span8">
         {{ msi_block_render_block('content_top', page) }}
-        <div class="box">{{ msi_block_render_block('content', page) }}</div>
+        {{ msi_block_render_block('content', page) }}
         {{ msi_block_render_block('content_bottom', page) }}
     </div>
     <div class="span4">
-        <div class="box">{{ msi_block_render_block('sidebar', page) }}</div>
+        {{ msi_block_render_block('sidebar', page) }}
     </div>
 </div>
 {% endblock content %}
