--- a/src/Msi/Bundle/UserBundle/Resources/views/Team/list.html.twig
+++ b/src/Msi/Bundle/UserBundle/Resources/views/Team/list.html.twig
@@ -1,3 +1,10 @@
+<div class="row">
 {% for team in teams %}
-    <h3><a href="{{ path('msi_user_team_show', {'slug': team.slug}) }}"><img class="thumbnail inline" src="http://placehold.it/64x64" alt="0"> {{ team.name }}</a></h3>
+    <div class="span4">
+        <a class="box text-center" href="{{ path('msi_user_team_show', {'slug': team.slug}) }}">
+            <p style="margin: -10px -10px 9px -10px !important;"><img src="http://placehold.it/298x100" alt="0"></p>
+            <h3 class="marginless">{{ team.name }}</h3>
+        </a>
+    </div>
 {% endfor %}
+</div>
