--- a/src/Msi/Bundle/MainBundle/Resources/views/layout.html.twig
+++ b/src/Msi/Bundle/MainBundle/Resources/views/layout.html.twig
@@ -23,9 +23,9 @@
                 <p><small><strong>GAGA DADA WAWA DIDI ... I RAPED YOUR MOTHER LAST DAY</strong></small></p>#}
             </div>
             <div class="span6" style="text-align: right;">
-                <a target="_blank" href="#"><img src="/bundles/msimain/img/layout/facebook.png" alt="facebook"></a>
+                <a target="_blank" href="http://www.facebook.com/Exigence"><img src="/bundles/msimain/img/layout/facebook.png" alt="facebook"></a>
                 <a target="_blank" href="https://twitter.com/TeamExigence"><img src="/bundles/msimain/img/layout/twitter.png" alt="twitter"></a>
-                <a target="_blank" href="#"><img src="/bundles/msimain/img/layout/rss.png" alt="rss"></a>
+                {#<a target="_blank" href="#"><img src="/bundles/msimain/img/layout/rss.png" alt="rss"></a>#}
             </div>
         </div>
     </div>
