--- a/src/Msi/Bundle/UserBundle/Resources/views/Team/list.html.twig
+++ b/src/Msi/Bundle/UserBundle/Resources/views/Team/list.html.twig
@@ -3,7 +3,7 @@
     <div class="span4">
         <a class="box text-center" href="{{ path('msi_user_team_show', {'slug': team.slug}) }}">
             <p style="margin: -10px -10px 9px -10px !important; border-bottom: 1px solid #333333;"><img src="{{ team.logo }}" alt="0"></p>
-            <h3 class="marginless">{{ team.name }}</h3>
+            <h3 class="marginless">{{ team.game }}</h3>
         </a>
     </div>
 {% endfor %}
