--- a/src/Msi/Bundle/MainBundle/Resources/views/layout.html.twig
+++ b/src/Msi/Bundle/MainBundle/Resources/views/layout.html.twig
@@ -39,6 +39,10 @@
 <!-- Body -->
 <div id="body">
     <div class="container">
+        <ul class="breadcrumb">
+            <li><a href="{{ path('homepage') }}"><i class="icon-home icon-white"></i></a></li>
+            {% block breadcrumb %}{% endblock breadcrumb %}
+        </ul>
         {% block content %}{% endblock content %}
     </div>
 </div>
