--- a/src/Msi/Bundle/MainBundle/Resources/public/css/style.css
+++ b/src/Msi/Bundle/MainBundle/Resources/public/css/style.css
@@ -67,7 +67,7 @@ a:hover {
     color: #000;
 }
 #body {
-    padding: 20px 0 11px;
+    padding: 10px 0 11px;
     border-bottom: 1px solid #333333;
 
     background: #222222;
@@ -128,4 +128,14 @@ hr {
 }
 .table tfoot td {
     border-top: 0 !important;
+}
+.breadcrumb {
+    background: none;
+    box-shadow: none;
+    border: 0;
+    padding: 0;
+    margin-bottom: 9px;
+}
+.breadcrumb li {
+    text-shadow: none;
 }
