--- a/src/Msi/Bundle/NewsBundle/Resources/views/Article/show.html.twig
+++ b/src/Msi/Bundle/NewsBundle/Resources/views/Article/show.html.twig
@@ -7,6 +7,6 @@
 {% endblock content %}
 
 {% block breadcrumb %}
-<li><span class="divider"><i class="icon-white icon-chevron-right"></i></span> <a href="{{ path('homepage') }}">News</a></li>
+<li><a href="{{ path('homepage') }}">News</a></li>
 <li class="active"><span class="divider"><i class="icon-white icon-chevron-right"></i></span> {{ article.title }}</li>
 {% endblock breadcrumb %}
