--- a/src/Msi/Bundle/UserBundle/Resources/views/Team/show.html.twig
+++ b/src/Msi/Bundle/UserBundle/Resources/views/Team/show.html.twig
@@ -19,6 +19,6 @@
 {% endblock content %}
 
 {% block breadcrumb %}
-<li><span class="divider"><i class="icon-white icon-chevron-right"></i></span> <a href="{{ path('homepage') }}">Teams</a></li>
+<li><a href="{{ path('homepage') }}">Teams</a></li>
 <li class="active"><span class="divider"><i class="icon-white icon-chevron-right"></i></span> {{ team.name }}</li>
 {% endblock breadcrumb %}
